# qdge

./: CMakeLists.txt  GenerateProjects.bat  GenerateProjects.sh  README.md  generate.py
CMake/: GroupSourcesByFolder.cmake
Game/: CMakeLists.txt
Game/Source/: Main.cpp
Scripts/: GenerateProjects.bat  GenerateProjects.sh
com/Core/: App.cpp  App.hpp
com/Tools/: Log.cpp  Log.hpp
com/Tools/Log/: Logger.cpp  Logger.hpp
enduser/Helpers/: EntryPoint.hpp
enduser/include/: qdge.hpp
example/: CMakeLists.txt  main.cpp
net/: Exceptions.hpp
net/Core/: OSSpecific.hpp
net/Tools/: Defines.hpp  QualityOfCode.hpp
qdge/: CMakeLists.txt
qdge/Headers/: App.hpp  Core.hpp  Test.hpp  qdge
qdge/Source/: App.cpp  Exceptions.hpp  Test.cpp  pch.hpp
qdge/Source/Core/: App.cpp  App.hpp  Core.hpp  EntryPoint.hpp
qdge/Source/Events/: AppEvents.cpp  AppEvents.hpp  Event.cpp  Event.hpp  KeyboardEvents.cpp  KeyboardEvents.hpp  MouseEvents.cpp  MouseEvents.hpp  WindowEvents.cpp  WindowEvents.hpp
qdge/Source/Tools/: Log.cpp  Log.hpp
qdge/include/: qdge.hpp
qdgeRuntime/: CMakeLists.txt
qdgeRuntime/Source/: Entry.cpp
